--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
+    "deploy": "serverless deploy",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
@@ -15,5 +16,12 @@
   "bugs": {
     "url": "https://github.com/adunkman/dc311rn-twitterbot/issues"
   },
-  "homepage": "https://github.com/adunkman/dc311rn-twitterbot#readme"
+  "homepage": "https://github.com/adunkman/dc311rn-twitterbot#readme",
+  "devDependencies": {
+    "serverless": "^1.38.0"
+  },
+  "dependencies": {
+    "node-fetch": "^2.3.0",
+    "twitter": "^1.7.1"
+  }
 }
